# gbcam

./: .config.sh  .gitignore  CMakeLists.txt  README.md  flash.sh  serial.sh  setup.sh  viewdump.html
boards/webcam/: fp-info-cache  webcam.kicad_pcb  webcam.kicad_prl  webcam.kicad_pro  webcam.kicad_sch
boards/webcam/footprints.pretty/: JLCPCB_USB_C_Receptacle_HRO_TYPE-C-31-M-12.kicad_mod  JST_ZH-9.kicad_mod  gbcam_mount.kicad_mod
etc/: pinout_breadboard.h  unused_sharp.c  viewdump.html
src/: constants.h  core1.c  core1.h  gbcam.c  main.c  pinout.h  sharp.c  sharp.h  utils.c  utils.h
src/drivers/: gbcam.c  gbcam.h  sharp.c  sharp.h
src/drivers/usb/: usb_descriptors.c  usb_descriptors.h  usb_serial.c  usb_serial.h
src/drivers/usb/include/: tusb_config.h
src/tasks/: debug_led.c  debug_led.h  video.c  video.h
